Fix reveal min-width on smallest mobile resolutions

--- a/app/assets/stylesheets/helsinki/modules/_reveals.scss
+++ b/app/assets/stylesheets/helsinki/modules/_reveals.scss
@@ -1,5 +1,5 @@
 .reveal{
-  min-width: 320px; // Minimum mobile body width
+  min-width: 304px; // 95% of minimum mobile body width 320px
 
   .reveal__title{
     // Give small space to the closing X button in reveals so that the title
